{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 25,
  "lineage": "9a5351c9-8617-c86c-bc56-b346cb28096d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-skate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02716d033cef6ac6c",
            "owner_id": "009092384618",
            "tags": {
              "Name": "Skate VPC IGW"
            },
            "vpc_id": "vpc-0874f2f2b78008963"
          },
          "depends_on": [
            "aws_vpc.skate-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e37fa1fca5cfee0b",
            "owner_id": "009092384618",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02716d033cef6ac6c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Skate Public Subnet RT"
            },
            "vpc_id": "vpc-0874f2f2b78008963"
          },
          "depends_on": [
            "aws_internet_gateway.igw-skate",
            "aws_vpc.skate-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059ef5e985b34e5ae",
            "route_table_id": "rtb-0e37fa1fca5cfee0b",
            "subnet_id": "subnet-03a29e095760cdbc0"
          },
          "depends_on": [
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet-skate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgdb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009092384618:security-group/sg-0d1f5e101fcabfeea",
            "description": "Allow traffic from public subnet",
            "egress": [],
            "id": "sg-0d1f5e101fcabfeea",
            "ingress": [
              {
                "cidr_blocks": [
                  "11.0.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "11.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "11.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_skate_web",
            "name_prefix": null,
            "owner_id": "009092384618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Skate DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0874f2f2b78008963"
          },
          "depends_on": [
            "aws_vpc.skate-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009092384618:security-group/sg-0a1cb5c8c2715d575",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [],
            "id": "sg-0a1cb5c8c2715d575",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_skate_web",
            "name_prefix": null,
            "owner_id": "009092384618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Skate Web Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0874f2f2b78008963"
          },
          "depends_on": [
            "aws_vpc.skate-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009092384618:subnet/subnet-093dd143b2b8634c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "11.0.2.0/24",
            "id": "subnet-093dd143b2b8634c7",
            "map_public_ip_on_launch": false,
            "owner_id": "009092384618",
            "tags": {
              "Name": "Skate Database Private Subnet"
            },
            "vpc_id": "vpc-0874f2f2b78008963"
          },
          "depends_on": [
            "aws_vpc.skate-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-skate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009092384618:subnet/subnet-03a29e095760cdbc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "11.0.1.0/24",
            "id": "subnet-03a29e095760cdbc0",
            "map_public_ip_on_launch": false,
            "owner_id": "009092384618",
            "tags": {
              "Name": "Skate Web Public Subnet"
            },
            "vpc_id": "vpc-0874f2f2b78008963"
          },
          "depends_on": [
            "aws_vpc.skate-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "skate-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009092384618:vpc/vpc-0874f2f2b78008963",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0bea81947250ca543",
            "default_route_table_id": "rtb-0756a8c60b09b1bbd",
            "default_security_group_id": "sg-088eea4f247e0ae44",
            "dhcp_options_id": "dopt-86e2a5ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0874f2f2b78008963",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0756a8c60b09b1bbd",
            "owner_id": "009092384618",
            "tags": {
              "Name": "skate-vpc"
            }
          }
        }
      ]
    }
  ]
}